--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <div class="container con-pad50">
+        <input type="text" class="js-uinput con-ti"/>
+        <button class="js-cari con-btn">Cari</button>
+    </div>
+    <div class="container con-pad50 js-con"></div>
+
     <script src="js/main.js"></script>
 </body>
 </html>
